# my_checkers

./: CMakeLists.txt  checkers.vcxproj  game.cpp  game.h  main.cpp  motions.cpp  motions.h
Board/: Board.cpp  Board.h
Figures/: Checker.cpp  Checker.h  Normal.cpp  Normal.h  Queen.cpp  Queen.h
MoveStatus/: MoveStatus.cpp  MoveStatus.h
Pieces/: Piece.cpp  Piece.h  Square.cpp  Square.h
Util/: MoveUtil.cpp  MoveUtil.h
x64/Debug/: checkers.exe.recipe  vc142.idb
x64/Debug/checkers.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  checkers.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
